--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
-flask
-flask-cors
-anthropic
-python-dotenv
-supabase-py
+flask==3.1.2
+flask-cors==6.0.1
+anthropic==0.73.0
+python-dotenv==1.2.1
+supabase==2.10.0
