--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/supabase-js": "^2.81.1",
+    "@xstate/react": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
@@ -22,7 +23,8 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-resizable-panels": "^3.0.6",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "xstate": "^5.24.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
